feat(z_ai-coding-helper): add npm package with auto-update support
- Add z_ai-coding-helper package (v0.0.7) using buildNpmPackage
- Implement npm auto-update in update-packages.sh for packages without
  public repositories
- Add conditional execution to CI workflow (skip build/commit when no changes)
- Remove devDependencies from package.json during build to prevent
  fetching unnecessary dev deps

--- a/README.org
+++ b/README.org
@@ -26,6 +26,7 @@ My personal [[https://github.com/nix-community/NUR][NUR]] repository.
 | =tbls-ask=                       | tbls external subcommand for asking LLM about datasources                         |
 | =pict=                           | Pairwise Independent Combinatorial Tool (Microsoft)                               |
 | =terraform-mcp-server=           | Terraform MCP Server for Infrastructure as Code automation                        |
+| =z_ai-coding-helper=             | GLM Coding Plan Helper for managing multiple coding tools                         |
 
 *** Fish Shell Plugins
 
